--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </div>
     </header>
     <main>
-        <h1>
+        <h1 class="logo-nick">
             &lt; Douglas /&gt; 
         </h1>
         
-            <h2>Desenvolvedor Web</h2>
+            <h2 class="logo-nick2">Desenvolvedor Web</h2>
             <p>
                 acima você vera mais informações sobre mim e meu trabalho, <br>
                 meus Projetos,Contato e meu Currículo
