--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -28,7 +28,7 @@
         <div >
             <h1>Contato</h1>
      <h2>Email douglaspe982@gmail.com</h2>
-     <h3>Numero +5571992618328</h3>
+     <h3>Numero +55 71 99261-8328</h3>
         </div>
     </footer>
 
