--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
             <h2 class="logo-nick2">Desenvolvedor Web</h2>
             <p>
-                acima você vera mais informações sobre mim e meu trabalho, <br>
+                acima você verá mais informações sobre mim e meu trabalho, <br>
                 meus Projetos,Contato e meu Currículo
             </p>
 
