--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -27,8 +27,8 @@
     <footer>
         <div >
             <h1>Contato</h1>
-     <h2>Email douglaspe982@gmail.com</h2>
-     <h3>Numero +55 71 99261-8328</h3>
+     <h2>Email <b>douglaspe982@gmail.com</b></h2>
+     <h3>Numero <b>+55 71 99261-8328</b></h3>
         </div>
     </footer>
 
