--- a/paginas/projetos.html
+++ b/paginas/projetos.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos</title>
     <link rel="stylesheet" href="../estilo/projetos.css">
+    <script>
+        alert('meus projetos estão em desenvolvimento, volte mais tarde')
+    </script>
     <link rel="shortcut icon" href="../icos/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -14,7 +17,7 @@
     </header>
     
     <main class="container">
-        <a href="projetos/Projeto-HtmlCss.html">
+        <a href="projetos/PrimeiroProjeto.html">
             <div class="project-html"> </div>
         </a>
       
