--- a/paginas/curriculo.html
+++ b/paginas/curriculo.html
@@ -26,10 +26,10 @@
         Endereço Pero Vaz Velho 202 <br>
         Cidade/Estado Salvador BA <br> 
         Email <b>douglaspe982@gmail.com</b> <br>
-        Número <b>+55 71 99261-8328</b>
+        Número <b>+55 71 99261-8328</b> <br> <br>
+        <hr>
         
-        
-        <b>Educação</b> <hr> <br>
+        <b>Educação</b>  <br>
         Cursando Ensino Médio (2°) Cursando curso Técnico De Informática (Vídeo Aulas)
         Cursando Curso Técnico De Programação (Front End.)
         <hr><br>
