--- a/paginas/curriculo.html
+++ b/paginas/curriculo.html
@@ -30,7 +30,8 @@
         <hr>
         
         <b>Educação</b>  <br>
-        Cursando Ensino Médio (2°) Cursando curso Técnico De Informática (Vídeo Aulas)
+        Cursando Ensino Médio (2°) <br>
+        Cursando curso Técnico De Informática (Vídeo Aulas) <br><br>
         Cursando Curso Técnico De Programação (Front End.)
         <hr><br>
         <b>-Experiências</b> <hr>
