--- a/paginas/curriculo.html
+++ b/paginas/curriculo.html
@@ -26,7 +26,7 @@
         Endereço Pero Vaz Velho 202 <br>
         Cidade/Estado Salvador BA <br> 
         Email <b>douglaspe982@gmail.com</b> <br>
-        Número <b>+55 71 99261-8328</b> <br> <br>
+        Número <b>+55 71 99261-8328</b> <br> 
         <hr>
         
         <b>Educação</b>  <br>
