--- a/paginas/curriculo.html
+++ b/paginas/curriculo.html
@@ -26,12 +26,12 @@
         Endereço Pero Vaz Velho 202 <br>
         Cidade/Estado Salvador BA <br> 
         Email <b>douglaspe982@gmail.com</b> <br>
-        Número <b>+55 71 99261-8328</b> <br> 
+        Número <b>+55 71 99261-8328</b> <br> <br>
         <hr>
         
         <b>Educação</b>  <br>
         Cursando Ensino Médio (2°) <br>
-        Cursando curso Técnico De Informática (Vídeo Aulas) <br><br>
+        Cursando curso Técnico De Informática (Vídeo Aulas) <br>
         Cursando Curso Técnico De Programação (Front End.)
         <hr><br>
         <b>-Experiências</b> <hr>
