--- a/paginas/curriculo.html
+++ b/paginas/curriculo.html
@@ -19,7 +19,8 @@
        
 
         
-     <p> <h1>Douglas Silva Santos</h1>
+     <p> <h1>Douglas Silva Santos</h1><br>
+            <h2>Frontend Developer</h2>
 
         Idade 15 (15/09/2006) <br>
         Bairro Liberdade <br>
