--- a/paginas/curriculo.html
+++ b/paginas/curriculo.html
@@ -36,7 +36,7 @@
         Cursando Curso Técnico De Programação (Front End.)
         <hr><br>
         <b>-Experiências</b> <hr>
-        ainda não tenho procuro meu primeiro emprego
+        Html e CSS
         <hr>
         <b>Conhecimento</b>
         <p>
