--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <div class="container">
+                <div><a href=""></a></div>
                 <ul class="NavBar">
                     <a href="paginas/contato.html"><li class="i1">Contato</li></a>
                     <a href="paginas/curriculo.html"><li class="i2">Curriculo</li></a>
