--- a/paginas/projetos.html
+++ b/paginas/projetos.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos</title>
     <link rel="stylesheet" href="../estilo/projetos.css">
-    <script>
-        alert('meus projetos estão em desenvolvimento, volte mais tarde')
-    </script>
     <link rel="shortcut icon" href="../icos/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -17,8 +14,8 @@
     </header>
     
     <main class="container">
-        <a href="projetos/PrimeiroProjeto.html">
-            <div class="project-html"> </div>
+        <a href="../Projetos/InstaCopy/index.html">
+            <div class="project-html"><b>InstaCopy</b></div>
         </a>
       
         <a href="projetos/Projeto-HtmlCss2.html"> <div class="project-html2"> </div>
